<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/activity_horizontal_margin">

  <com.google.android.material.textview.MaterialTextView
      style="@style/TextAppearance.MaterialComponents.Subtitle1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:text="@string/add_subject_head"/>

  <com.google.android.material.textview.MaterialTextView
      style="@style/TextAppearance.MaterialComponents.Body2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/add_subject_desc"/>

  <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/hint_subject_name">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/subjectNameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/subjectClassWrapper"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/hint_subject_class">

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/subjectClassField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/subjectTeacherWrapper"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/hint_subject_teacher">

    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
        android:id="@+id/subjectTeacherField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"/>

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.checkbox.MaterialCheckBox
      android:id="@+id/skipTeacherAssignment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/label_skip_teacher_assignment"/>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/okButton"
      style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginTop="8dp"
      android:text="@string/label_save"/>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/editButton"
      style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="end"
      android:layout_marginTop="8dp"
      android:visibility="gone"
      android:text="@string/label_edit"/>

</LinearLayout>