<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

  <com.google.android.material.card.MaterialCardView
      android:layout_width="64dp"
      android:layout_height="64dp"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="8dp"
      app:cardBackgroundColor="?android:attr/colorBackground"
      app:cardCornerRadius="32dp"
      app:strokeColor="?android:attr/textColorPrimary"
      app:strokeWidth="2dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ph_student"/>

  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/userNameLabel"
      style="@style/TextAppearance.MaterialComponents.Body1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat"
      android:gravity="center"
      android:text="@string/ph_name"
      android:textStyle="bold"
      app:fontFamily="@font/montserrat" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/userEmailLabel"
      style="@style/TextAppearance.MaterialComponents.Body2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat"
      android:gravity="center"
      android:text="@string/ph_email"
      app:fontFamily="@font/montserrat" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/headline"
      style="@style/TextAppearance.MaterialComponents.Caption"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat"
      android:text="@string/ph_type"
      app:fontFamily="@font/montserrat" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/profileButton"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="280sp"
      android:layout_height="52dp"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="16dp"
      android:fontFamily="@font/montserrat"
      android:text="@string/label_profile"
      android:textAllCaps="false"
      app:backgroundTint="@color/purpleNew"
      app:cornerRadius="16dp" />

  <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#8888"/>

</LinearLayout>
