<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@android:color/transparent"
      app:elevation="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_scrollFlags="scroll"/>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="64dp"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">

      <com.google.android.material.textview.MaterialTextView
          style="@style/TextAppearance.MaterialComponents.Body1"
          android:id="@+id/className"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ph_assigned_class"/>

      <com.google.android.material.textview.MaterialTextView
          style="@style/TextAppearance.MaterialComponents.Body2"
          android:id="@+id/teacherName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/ph_name"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:gravity="center_vertical"
          android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/lecture_times_head"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addAppointmentButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="end"
            android:padding="0dp"
            android:onClick="onAddAppointmentClicked"
            android:text="@string/label_add"
            android:visibility="gone"
            app:rippleColor="@android:color/transparent"/>

      </LinearLayout>

      <co.aspirasoft.view.NestedListView
          android:id="@+id/appointmentsList"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:divider="@null"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:gravity="center_vertical"
          android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/course_material_head"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addMaterialButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="end"
            android:padding="0dp"
            android:onClick="onAddMaterialClicked"
            android:text="@string/label_add"
            android:visibility="gone"
            app:rippleColor="@android:color/transparent"/>

      </LinearLayout>

      <co.aspirasoft.view.NestedListView
          android:id="@+id/contentList"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:gravity="center_vertical"
          android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/homework_sheets_head"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addHomeworkButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="end"
            android:padding="0dp"
            android:onClick="onAddHomeworkClicked"
            android:text="@string/label_add"
            android:visibility="gone"
            app:rippleColor="@android:color/transparent"/>

      </LinearLayout>

      <co.aspirasoft.view.NestedListView
          android:id="@+id/homeworkList"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|center_horizontal"
      android:orientation="horizontal">

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/noticeBoardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onNoticeBoardClicked"
        android:text="@string/label_news"
        app:icon="@drawable/ic_news"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/addGradesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:onClick="onAddGradesClicked"
        android:text="@string/label_grades"
        app:icon="@drawable/ic_grades"/>

  </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>