<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin">

  <com.google.android.material.card.MaterialCardView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:cardBackgroundColor="?android:attr/colorBackground"
      app:cardCornerRadius="16dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/userImage"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ph_student"/>

  </com.google.android.material.card.MaterialCardView>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Body1"
        android:id="@+id/teacherName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_name"
        android:textStyle="bold"/>

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:id="@+id/teacherEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ph_email"/>

  </LinearLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/revokeInviteButton"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      android:layout_width="match_parent"
      android:layout_height="32dp"
      android:gravity="top|end"
      android:padding="0dp"
      android:text="@string/label_revoke"
      app:rippleColor="@android:color/transparent"/>

</LinearLayout>