<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manageStudents.manageStudentDashboard">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="center"
        app:elevation="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/transparent"
        app:layout_scrollFlags="scroll"/>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/add_student_head"
            android:textAllCaps="false"
            android:textSize="25dp"
            android:textColor="@color/purpleNew"
            app:fontFamily="@font/montserrat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/joinedStudentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.80"
            android:gravity="center"
            android:onClick="onJoinedStudentClicked"
            android:text="@string/label_staff_joined"
            android:textAllCaps="false"
            app:icon="@drawable/ic_team"
            app:iconGravity="textStart"
            app:iconPadding="2dp"
            app:iconSize="36dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/invitedStudentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.80"
            android:gravity="center"
            android:onClick="onInvitedStudentClicked"
            android:text="@string/label_staff_invited"
            android:textAllCaps="false"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_invite"
            app:iconPadding="2dp"
            app:iconSize="32dp"/>

    </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_8dp"
            android:text="@string/add_student_desc"
            app:fontFamily="@font/montserrat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:weightSum="2"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/blurpurple"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailFieldStudent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/montserrat"
                android:inputType="textFilter|textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp">

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/inviteSingleButtonStudent"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat"
            android:onClick="onInviteSingleClickedStudent"
            android:padding="15dp"
            android:textSize="17dp"
            android:text="@string/label_invite"
            app:cornerRadius="12dp" />

    </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>